2004-04-13  Sven Neumann  <sven@gimp.org>
	* tools/gimp-remote.c: reverted last change and go back to the
	solution using fork(). Hopefully fixes bug #139158 this time.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12936 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-13  Sven Neumann  <sven@gimp.org>
 
+	* tools/gimp-remote.c: reverted last change and go back to the
+	solution using fork(). Hopefully fixes bug #139158 this time.
+
+2004-04-13  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimp-utils.[ch] (gimp_get_default_language): added a
 	category parameter to make this function more flexible.
 
