2004-04-13  Sven Neumann  <sven@gimp.org>
	* plug-ins/imagemap/imap_cern_parse.c
	* plug-ins/imagemap/imap_csim_parse.c
	* plug-ins/imagemap/imap_ncsa_parse.c: regenerated using GNU Bison
	version 1.875a. Fixes bug #139894.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12937 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-04-13  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/imagemap/imap_cern_parse.c
+	* plug-ins/imagemap/imap_csim_parse.c
+	* plug-ins/imagemap/imap_ncsa_parse.c: regenerated using GNU Bison
+	version 1.875a. Fixes bug #139894.
+
+2004-04-13  Sven Neumann  <sven@gimp.org>
+
 	* tools/gimp-remote.c: reverted last change and go back to the
 	solution using fork(). Hopefully fixes bug #139158 this time.
 
