2004-04-14  Miloslav Trmac  <mitr@volny.cz>
	* cs.po: Updated Czech translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12943 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/cs.po
+++ b/po/cs.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-04-14 00:29+0200\n"
-"PO-Revision-Date: 2004-04-05 15:06+0200\n"
+"POT-Creation-Date: 2004-04-14 03:30+0200\n"
+"PO-Revision-Date: 2004-04-14 13:49+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1276,14 +1276,12 @@ msgid "Move Item"
 msgstr "Přesunout položku"
 
 #: app/core/core-enums.c:601
-#, fuzzy
 msgid "Scale Item"
-msgstr "Velikost obrázku"
+msgstr "Velikost položky"
 
 #: app/core/core-enums.c:602
-#, fuzzy
 msgid "Resize Item"
-msgstr "Změnit velikost obrázku"
+msgstr "Změnit velikost položky"
 
 #: app/core/core-enums.c:603 app/core/core-enums.c:633
 #: app/core/gimplayer.c:1001 app/gui/layers-commands.c:1049
