--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-14  Raphaël Quinet  <quinet@gamers.org>
+
+	* plug-ins/script-fu/scripts/copy-visible.scm: New version of the
+	script that works on a temporary copy of the image instead of
+	copying the visible layers.  Fixes bug #139989.
+
 2004-04-14  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/film.c: fixed typo (bug #140039).
