added punjabi translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12948 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-15  Guntupalli Karunakar <karunakar@freedomink.org>
+
+	* pa.po: Added translation by
+	Punjab Linux Technology <punjablinux@netscape.net>.
+
 2004-04-13  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
