2004-04-15  Sven Neumann  <sven@gimp.org>
	* NEWS
	* README: mention that this is the development branch.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12951 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-15  Sven Neumann  <sven@gimp.org>
 
+	* NEWS
+	* README: mention that this is the development branch.
+
+2004-04-15  Sven Neumann  <sven@gimp.org>
+
 	* app/paint-funcs/paint-funcs.[ch]: 
 	* app/paint-funcs/paint-funcs-generic.h: header cleanup, added
 	some const qualifiers, converted tabs to spaces. Fixes bug #140115
