2004-04-15  Sven Neumann  <sven@gimp.org>
	* app/core/gimppalette-import.[ch]
	* app/gui/palette-import-dialog.c: added palette import from RIFF
	palette files based on a patch from ÃÂRDI GergÃÂµ (bug #129788).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12959 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-15  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimppalette-import.[ch]
+	* app/gui/palette-import-dialog.c: added palette import from RIFF
+	palette files based on a patch from ÉRDI Gergõ (bug #129788).
+
 2004-04-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/xcf/xcf.c (xcf_save_invoker) (xcf_load_invoker): forgot
