2004-04-15  Michael Natterer  <mitch@gimp.org>
	* app/core/gimplayermask.c (gimp_layer_mask_class_init): set
	translate_desc to "Move Layer Mask".

	* app/tools/gimpeditselectiontool.c: take the undo desc
	from the moved item's class instead of duplicating all
	strings here.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12960 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-04-15  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimplayermask.c (gimp_layer_mask_class_init): set
+	translate_desc to "Move Layer Mask".
+
+	* app/tools/gimpeditselectiontool.c: take the undo desc
+	from the moved item's class instead of duplicating all
+	strings here.
+
 2004-04-15  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimppalette-import.[ch]
