--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-15  Michael Natterer  <mitch@gimp.org>
+
+	* configure.in: depend on glib 2.4.0, gtk+ 2.4.0, pangoft2 1.4.0
+
+	* app/sanity.c: changed accordingly.
+
 2004-04-15  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcropoptions.[ch]
