2004-04-15  Michael Natterer  <mitch@gimp.org>
	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/flame/flame.c
	* plug-ins/gfig/gfig.c: first plug-ins ported to GtkFileChooser.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12965 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-04-15  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/FractalExplorer/Dialogs.c
+	* plug-ins/flame/flame.c
+	* plug-ins/gfig/gfig.c: first plug-ins ported to GtkFileChooser.
+
+2004-04-15  Michael Natterer  <mitch@gimp.org>
+
 	* app/display/gimpdisplayshell-callbacks.c
 	* app/display/gimpdisplayshell.c
 	* app/widgets/gimpcontainertreeview.c: removed runtime version
