--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-04-15  Sven Neumann  <sven@gimp.org>
+
+	* configure.in
+	* plug-ins/Makefile.am
+	* plug-ins/winicon/Makefile.am
+	* plug-ins/winicon/icodialog.[ch]
+	* plug-ins/winicon/icoload.[ch]
+	* plug-ins/winicon/icosave.[ch]
+	* plug-ins/winicon/main.[ch]: added plug-in to load and save
+	Windows icon files. Plug-in written by Christian Kreibich, port to
+	GIMP-2.0 API by Gregor Riepl, massive code cleanup by me. Fixes
+	bug #139160.
+
 2004-04-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdnd.c (gimp_dnd_data_source_add)
