2004-04-15  Sven Neumann  <sven@gimp.org>
	* plug-ins/winicon/icodialog.c: fixed gtk+ includes, added a
	warning that deprecated widgets are being used.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12968 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-15  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/winicon/icodialog.c: fixed gtk+ includes, added a
+	warning that deprecated widgets are being used.
+
+2004-04-15  Sven Neumann  <sven@gimp.org>
+
 	* configure.in
 	* plug-ins/Makefile.am
 	* plug-ins/winicon/Makefile.am
