2004-04-15  Tor Lillqvist  <tml@iki.fi>
	* libgimpthumb/Makefile.am: For Win32, install gimpthumb.def, like
	the .def files of the other libgimp* libs.

	* app/Makefile.am (INCLUDES): Add PANGOFT2_CFLAGS.

	* gimp-zip.in: Put also libgimpthumb in the developer package.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12971 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-04-15  Tor Lillqvist  <tml@iki.fi>
+
+	* libgimpthumb/Makefile.am: For Win32, install gimpthumb.def, like
+	the .def files of the other libgimp* libs.
+
+	* app/Makefile.am (INCLUDES): Add PANGOFT2_CFLAGS.
+
+	* gimp-zip.in: Put also libgimpthumb in the developer package.
+
 2004-04-15  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/winicon/icodialog.c: fixed gtk+ includes, added a
