2004-04-16  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/AlienMap.c: removed the AlienMap plug-in since
	AlienMap2 duplicates its functionality.

	* plug-ins/common/AlienMap2.c: applied patch from William Skaggs
	with a couple of user interface improvements (bug #140079).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12973 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-04-16  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/Makefile.am
+	* plug-ins/common/plugin-defs.pl
+	* plug-ins/common/AlienMap.c: removed the AlienMap plug-in since
+	AlienMap2 duplicates its functionality.
+
+	* plug-ins/common/AlienMap2.c: applied patch from William Skaggs
+	with a couple of user interface improvements (bug #140079).
+
 2004-04-15  Tor Lillqvist  <tml@iki.fi>
 
 	* libgimpthumb/Makefile.am: For Win32, install gimpthumb.def, like
