--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-15  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: removed plug-ins/common/AlienMap.c
+
 2004-04-15  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
