--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-16  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/helpbrowser/dialog.c: use a GtkComboBox instead of
+	GtkCombo and keep the history in a GtkListStore.
+
 2004-04-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpmarshal.list: new marshaller VOID:STRING
