--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-16  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/helpbrowser/dialog.c (browser_dialog_load): present the
+	help browser window.
+
+2004-04-16  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/helpbrowser/dialog.c: use a GtkComboBox instead of
 	GtkCombo and keep the history in a GtkListStore.
 
