2004-04-16  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpcroptool.c: some code cleanup that I forgot to do
	when applying the patch.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12980 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-16  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimpcroptool.c: some code cleanup that I forgot to do
+	when applying the patch.
+
+2004-04-16  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/helpbrowser/dialog.c (browser_dialog_load): present the
 	help browser window.
 
