2004-04-16  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpcolorpickertool.c
	* app/tools/gimpmeasuretool.c: don't use gtk_window_present() to
	raise the tool dialog since it also moves the focus away from the
	image window. Fixes the problem described in bug #139349.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12981 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-04-16  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimpcolorpickertool.c
+	* app/tools/gimpmeasuretool.c: don't use gtk_window_present() to
+	raise the tool dialog since it also moves the focus away from the
+	image window. Fixes the problem described in bug #139349.
+
+2004-04-16  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimpcroptool.c: some code cleanup that I forgot to do
 	when applying the patch.
 
