2004-04-16  Maxim Dziumanenko <mvd@mylinux.com.ua>
	* Updated Ukrainian translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12984 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-16  Maxim Dziumanenko <mvd@mylinux.com.ua>
+
+	* Makefile.am (tips_POFILES): added uk.po (Ukraininan).
+	* uk.po: Added Ukrainian translation
+
 2004-04-15  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
