--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-16  Maxim Dziumanenko <mvd@mylinux.com.ua>
+
+	* uk.po: Updated Ukrainian translation
+
 2004-04-15  Guntupalli Karunakar <karunakar@freedomink.org>
 
 	* pa.po: Added translation by
