2004-04-16  Pedro Gimeno  <pggimeno@wanadoo.es>
	* plug-ins/common/tile.c (tile): changed a call to
	gimp_image_undo_enable to _undo_disable which was obviously the
	intention of the author. Added a call to gimp_drawable_update to
	get the previews refreshed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12987 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-16  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* plug-ins/common/tile.c (tile): changed a call to
+	gimp_image_undo_enable to _undo_disable which was obviously the
+	intention of the author. Added a call to gimp_drawable_update to
+	get the previews refreshed.
+
 2004-04-16  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcolorpickertool.c
