2004-04-17 Henrik Brix Andersen <brix@gimp.org>
* plug-ins/common/jpeg.c (save_dialog): live preview doesn't
modify the undo history of the image anymore, label changed
accordingly. Fixes bug #140296.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12990 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-17  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/common/jpeg.c (save_dialog): live preview doesn't
+	modify the undo history of the image anymore, label changed
+	accordingly. Fixes bug #140296.
+
 2004-04-16  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* plug-ins/common/tile.c (tile): changed a call to
